--- a/assets/partials/chat-bubble/_chat-bubble.scss
+++ b/assets/partials/chat-bubble/_chat-bubble.scss
@@ -2,7 +2,11 @@
   padding-top: 25px;
   display: flex;
   justify-content: center;
-  min-width: 300px;
+  width: 300px;
+  img {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .drop-content {
